congregation page complete, navbar + scrollbar fix

--- a/ecos-app/src/app/game/congregation/page.module.css
+++ b/ecos-app/src/app/game/congregation/page.module.css
@@ -6,3 +6,9 @@
     justify-content: center;
     align-items: center;
 }
+
+@media (max-width: 996px) {
+    .page {
+        height: auto;
+    }
+}
